# tauri-by-simon

./: .gitignore  CNAME  README.md  astro.config copy.mjs  astro.config.mjs  book.toml  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: automerge.yaml  pages.yaml  pages.yml  release.yaml  sponsors.yaml  test.yaml
public/: navigate.js
src/: SUMMARY.md  architecture.md  best_practises.md  ci_cd.md  contributing.md  crates_io.md  developing.md  distributing.md  getting_help.md  hacking.md  introduction.md  javascript_concepts.md  legal_concepts.md  other_resources.md  plugins.md  practise_project_flashcards.md  practise_project_todo.md  rust_concepts.md  state_of_the_project.md  tauri_concepts.md  testing.md  web_concepts.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/architecture/: dependencies.md  process_model.md  repositories.md  security.md  webviews.md
src/best_practises/: documentation_ready.md  pick_a_framework.md  project_structure.md  rust_first.md  security_mindset.md
src/components/: AwesomeCard.astro  AwesomeTauri.astro  CardGridSearch.astro  CodeSelect.astro  CodeSpecific.astro  DownloadFix.astro  Footer.astro  FrameworkPicker.astro  Header.astro  HeroBackground.astro  OverviewCards.astro  OverviewSteps.astro  References.astro  ShowSolution.astro  Sidebar.astro  SidebarProgress.astro  SimonSays.astro  SimonSaysVue.vue  Sponsors.astro
src/concepts/: async_and_threads.md  custom_uri_schema.md  state_management.md  taurignore.md
src/content/: config.ts  glossary.ts
src/contributing/: for_non_developers.md  where_to_begin.md
src/cookbook/: admin_permissions.md  calling_rust_from_the_frontend.md  deep_linking.md  glue_library.md  making_your_own_cli.md  multiwindow.md  secure_token_handling.md  splashscreen.md  system_tray.md  tauri_plugins.md  transaction_chain.md  window_menu.md  (+1 more)
(+483 files in other folders)
