[package]
name = "tauri-by-simon"
version = "0.1.6"
description = "A Tauri App"
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
license = ""
repository = "https://github.com/simonhyll/tauri-by-simon"
default-run = "tauri-by-simon"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
    "shell-open",
    "window-all",
    "updater",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
