[package]
name = "tauri-by-simon"
version = "0.1.20"
description = "A Tauri App"
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
license = ""
repository = "https://github.com/simonhyll/tauri-by-simon"
default-run = "tauri-by-simon"
edition = "2021"
rust-version = "1.74"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = 3
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
    "shell-open",
    "window-all",
    "updater",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
